# multi-agent-research-agent

./: .env.example  .gitignore  README.md  api.py  main.py  vercel.json  workflow.html
app/: globals.css  page.tsx
backend/: api.py  main.py  pyproject.toml  test_multiturn.py
backend/src/: llm.py  state.py
backend/src/agents/: clarity.py  research.py  synthesis.py  validator.py
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/clarify/: route.ts
src/: data.py  graph.py  state.py
src/agents/: clarity.py  research.py  synthesis.py
